Point usrsctp to a custom repo
It includes a fix for building usrsctp as a subproject

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
         ignore = untracked
 [submodule "usrsctp"]
 	path = usrsctp
-	url = https://github.com/sctplab/usrsctp.git
+	url = git@github.com:LoveIsGrief/usrsctp.git
         ignore = untracked
