Make sure usrsctp is built before librtcdcpp
And compile it for the first time while including librtcdcpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(webrtc)
 cmake_minimum_required(VERSION 2.8)
+set(CMAKE_CXX_STANDARD 14)
 aux_source_directory(. SRC_LIST)
 
 # Add libusrcp dep for librtcdcpp
@@ -8,10 +9,12 @@ add_subdirectory(usrsctp)
 
 # https://stackoverflow.com/questions/37719094/is-it-possible-to-link-a-cmake-project-to-subprojects
 # Point to libusrsctp so that find_package in librtcdcpp can find it
-set(USRSCTP_LIBRARY ${CMAKE_SOURCE_DIR}/usrsctp/usrsctplib/libusrsctp.so)
+set(USRSCTP_LIBRARY ${CMAKE_BINARY_DIR}/usrsctp/usrsctplib/libusrsctp.so)
 set(USRSCTP_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/usrsctp/usrsctplib)
+
 set(DISABLE_SPDLOG ON)
 add_subdirectory(librtcdcpp)
+add_dependencies(rtcdcpp usrsctp)
 
 # Our main program
 add_executable(${PROJECT_NAME} ${SRC_LIST})
